# poor-mans-mixin

./: cabal.project  orphans.hs  poor-mans-mixin.cabal
bar-type/: Bar.hs  bar-type.cabal
foo-bar-instance/: Foo.hs  foo-bar-instance.cabal
foo-class/: Foo.hs  foo-class.cabal
