cabal-version:       >=1.10
name:                foo-bar-instance
version:             0.1.0.0
author:              Koji Miyazato
maintainer:          viercc@gmail.com
build-type:          Simple

library
  build-depends:       base >=4.13, foo-class, bar-type
  hs-source-dirs:      .
  exposed-modules:     Foo
  default-language:    Haskell2010

